syntax = "proto3";
package stafihub.stafihub.rstaking;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "rstaking/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/stafihub/stafihub/x/rstaking/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stafihub/stafihub/rstaking/params";
  }
  // Queries a list of InflationBase items.
	rpc InflationBase(QueryInflationBaseRequest) returns (QueryInflationBaseResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rstaking/inflation_base";
	}

// Queries a list of ModuleAccount items.
	rpc ModuleAccount(QueryModuleAccountRequest) returns (QueryModuleAccountResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rstaking/module_account";
	}

// Queries a list of ValidatorWhitelist items.
	rpc ValidatorWhitelist(QueryValidatorWhitelistRequest) returns (QueryValidatorWhitelistResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rstaking/validator_whitelist";
	}

// Queries a list of WhitelistSwitch items.
	rpc WhitelistSwitch(QueryWhitelistSwitchRequest) returns (QueryWhitelistSwitchResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rstaking/whitelist_switch";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryInflationBaseRequest {
}

message QueryInflationBaseResponse {
  string inflationBase = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

message QueryModuleAccountRequest {
}

message QueryModuleAccountResponse {
  string moduleAccount = 1;
}

message QueryValidatorWhitelistRequest {
}

message QueryValidatorWhitelistResponse {
  repeated string valAddress = 1;
}

message QueryWhitelistSwitchRequest {
}

message QueryWhitelistSwitchResponse {
	bool isOpen = 1;
}

// this line is used by starport scaffolding # 3
